<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_express">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="16dp">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fmd_v_guideline_screen_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fmd_v_guideline_screen_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />

        <ImageView
            android:id="@+id/fmd_iv_big_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/amd_iv_cd_poster"
            android:scaleType="centerCrop"
            android:src="@drawable/image_poster"
            app:layout_constraintBottom_toTopOf="@id/fmd_h_guideline_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/poster_gradient"
            app:layout_constraintBottom_toTopOf="@id/fmd_h_guideline_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fml_h_guideline_actionbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.05" />

        <TextView
            android:id="@+id/fmd_tv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="8dp"
            android:text="@string/amd_tv_back_btn_text"
            android:textColor="@color/white_50_opacity"
            android:textSize="12sp"
            app:drawableLeftCompat="@drawable/ic_btn_back"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toTopOf="@id/fml_h_guideline_actionbar" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fmd_h_guideline_age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.3" />

        <TextView
            android:id="@+id/fmd_tv_age_limit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_age_limit"
            android:padding="2dp"
            android:text="@string/age_limit_text"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toTopOf="@id/fmd_h_guideline_age_limit" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/fmd_h_guideline_poster"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.35" />

        <TextView
            android:id="@+id/fmd_tv_movie_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:shadowColor="@color/black_50_opacity"
            android:shadowDy="12"
            android:shadowRadius="12"
            android:text="@string/amd_tv_movie_title_text"
            android:textColor="@color/white_smoke"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/fmd_v_guideline_screen_end"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_age_limit" />

        <TextView
            android:id="@+id/fmd_tv_tag_line"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/amd_tv_tag_line_text"
            android:textColor="@color/radical_red"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/fmd_v_guideline_screen_end"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_movie_title" />

        <androidx.appcompat.widget.AppCompatRatingBar
            android:id="@+id/fmd_rating_bar_stars"
            style="@style/RatingBarOnMovieDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:progress="80"
            android:theme="@style/RatingBarOnMovieDetails"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_tag_line" />

        <TextView
            android:id="@+id/fmd_tv_review_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/amd_tv_review_number_text"
            android:textColor="@color/dolphin"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/fmd_rating_bar_stars"
            app:layout_constraintStart_toEndOf="@id/fmd_rating_bar_stars"
            app:layout_constraintTop_toTopOf="@id/fmd_rating_bar_stars" />

        <TextView
            android:id="@+id/fmd_tv_storyline_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:shadowColor="@color/black_50_opacity"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/amd_tv_storyline_title_text"
            android:textColor="@color/white_smoke"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_review_number" />

        <TextView
            android:id="@+id/fmd_tv_storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingMultiplier="1.2"
            android:text="@string/amd_tv_storyline"
            android:textColor="@color/white_75_opacity"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@id/fmd_v_guideline_screen_end"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_storyline_title" />

        <TextView
            android:id="@+id/fmd_tv_cast_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="8dp"
            android:shadowColor="@color/black_50_opacity"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/amd_tv_cast_title_text"
            android:textColor="@color/white_smoke"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_storyline" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fmd_iv_actor1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/robert_downey"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toStartOf="@+id/fmd_iv_actor2"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@id/fmd_v_guideline_screen_start"
            app:layout_constraintTop_toBottomOf="@id/fmd_tv_cast_title"
            app:shapeAppearanceOverlay="@style/ActorImageViewStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/robert_downey_jr"
            android:textAppearance="@style/ActorNameTextViewStyle"
            app:layout_constraintEnd_toEndOf="@id/fmd_iv_actor1"
            app:layout_constraintStart_toStartOf="@id/fmd_iv_actor1"
            app:layout_constraintTop_toBottomOf="@id/fmd_iv_actor1" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fmd_iv_actor2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_evans"
            app:layout_constraintBottom_toBottomOf="@id/fmd_iv_actor1"
            app:layout_constraintEnd_toStartOf="@+id/fmd_iv_actor3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fmd_iv_actor1"
            app:layout_constraintTop_toTopOf="@id/fmd_iv_actor1"
            app:shapeAppearanceOverlay="@style/ActorImageViewStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_evans"
            android:textAppearance="@style/ActorNameTextViewStyle"
            app:layout_constraintEnd_toEndOf="@id/fmd_iv_actor2"
            app:layout_constraintStart_toStartOf="@id/fmd_iv_actor2"
            app:layout_constraintTop_toBottomOf="@id/fmd_iv_actor2" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fmd_iv_actor3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/mark_ruffalo"
            app:layout_constraintBottom_toBottomOf="@id/fmd_iv_actor1"
            app:layout_constraintEnd_toStartOf="@+id/fmd_iv_actor4"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fmd_iv_actor2"
            app:layout_constraintTop_toTopOf="@id/fmd_iv_actor1"
            app:shapeAppearanceOverlay="@style/ActorImageViewStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/mark_ruffalo"
            android:textAppearance="@style/ActorNameTextViewStyle"
            app:layout_constraintEnd_toEndOf="@id/fmd_iv_actor3"
            app:layout_constraintStart_toStartOf="@id/fmd_iv_actor3"
            app:layout_constraintTop_toBottomOf="@id/fmd_iv_actor3" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/fmd_iv_actor4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/chris_hemsworth"
            app:layout_constraintBottom_toBottomOf="@id/fmd_iv_actor1"
            app:layout_constraintEnd_toEndOf="@id/fmd_v_guideline_screen_end"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fmd_iv_actor3"
            app:layout_constraintTop_toTopOf="@id/fmd_iv_actor1"
            app:shapeAppearanceOverlay="@style/ActorImageViewStyle" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/chris_hemsworth"
            android:textAppearance="@style/ActorNameTextViewStyle"
            app:layout_constraintEnd_toEndOf="@id/fmd_iv_actor4"
            app:layout_constraintStart_toStartOf="@id/fmd_iv_actor4"
            app:layout_constraintTop_toBottomOf="@id/fmd_iv_actor4" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>