<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    android:layout_margin="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/midnight_express">

            <View
                android:id="@+id/vhm_v_card"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/bg_movie_card"
                android:shadowColor="@color/black_50_opacity"
                android:shadowDy="16"
                android:shadowRadius="24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/vhm_siv_card_poster"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="2dp"
                android:layout_marginBottom="8dp"
                android:scaleType="centerCrop"
                android:src="@drawable/card_poster"
                app:layout_constraintBottom_toTopOf="@id/vhm_tv_movie_title"
                app:layout_constraintEnd_toEndOf="@id/vhm_v_card"
                app:layout_constraintStart_toStartOf="@id/vhm_v_card"
                app:layout_constraintTop_toTopOf="@id/vhm_v_card"
                app:shapeAppearanceOverlay="@style/PosterCardImageViewStyle" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/gradient_card_poster"
                app:layout_constraintBottom_toBottomOf="@id/vhm_siv_card_poster"
                app:layout_constraintEnd_toEndOf="@id/vhm_siv_card_poster"
                app:layout_constraintStart_toStartOf="@id/vhm_siv_card_poster"
                app:layout_constraintTop_toTopOf="@id/vhm_siv_card_poster" />

            <TextView
                android:id="@+id/vhm_tv_age_limit"
                style="@style/FmlTextViewAgeLimitStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/age_limit_text"
                app:layout_constraintStart_toStartOf="@id/vhm_v_card"
                app:layout_constraintTop_toTopOf="@id/vhm_v_card" />

            <ImageView
                android:id="@+id/vhm_iv_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="8dp"
                android:contentDescription="@string/fml_iv_cd_like_button"
                android:src="@drawable/ic_like"
                app:layout_constraintEnd_toEndOf="@id/vhm_v_card"
                app:layout_constraintTop_toTopOf="@id/vhm_v_card" />

            <TextView
                android:id="@+id/vhm_tv_tag_line"
                style="@style/FmlTextViewTagLineStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amd_tv_tag_line_text"
                app:layout_constraintBottom_toTopOf="@id/vhm_rating_bar_stars"
                app:layout_constraintEnd_toEndOf="@id/vhm_v_card"
                app:layout_constraintStart_toStartOf="@id/vhm_v_card" />

            <androidx.appcompat.widget.AppCompatRatingBar
                android:id="@+id/vhm_rating_bar_stars"
                style="@style/RatingBarOnMoviesListStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:progress="80"
                android:scaleX="0.8"
                android:scaleY="0.8"
                android:theme="@style/RatingBarOnMoviesListStyle"
                app:layout_constraintBottom_toBottomOf="@id/vhm_siv_card_poster"
                app:layout_constraintStart_toStartOf="@id/vhm_v_card" />

            <TextView
                android:id="@+id/vhm_tv_review_number"
                style="@style/FmlTextViewReviewNumberStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amd_tv_review_number_text"
                app:layout_constraintBottom_toBottomOf="@id/vhm_rating_bar_stars"
                app:layout_constraintStart_toEndOf="@id/vhm_rating_bar_stars"
                app:layout_constraintTop_toTopOf="@id/vhm_rating_bar_stars" />

            <TextView
                android:id="@+id/vhm_tv_movie_title"
                style="@style/FmlTextViewMovieTitleStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/amd_tv_movie_title_text"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@id/vhm_siv_card_poster"
                app:layout_constraintEnd_toEndOf="@id/vhm_v_card"
                app:layout_constraintStart_toStartOf="@id/vhm_v_card" />

            <TextView
                android:id="@+id/vhm_tv_duration"
                style="@style/FmlTextViewMovieDurationStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fml_tv_text_duration"
                app:layout_constraintTop_toBottomOf="@id/vhm_tv_movie_title"
                app:layout_constraintStart_toStartOf="@id/vhm_v_card" />

        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>