<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/midnight_express">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fml_v_guideline_screen_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fml_v_guideline_screen_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fml_h_guideline_actionbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <TextView
        android:id="@+id/fml_tv_movies_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:text="@string/fml_tv_text_movies_list"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:drawableLeftCompat="@drawable/ic_movies_list"
        app:layout_constraintStart_toStartOf="@id/fml_v_guideline_screen_start"
        app:layout_constraintTop_toTopOf="@id/fml_h_guideline_actionbar" />

    <View
        android:id="@+id/fml_v_card"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_movie_card"
        android:shadowColor="@color/black_50_opacity"
        android:shadowDy="16"
        android:shadowRadius="24"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/fml_tv_movies_list"
        app:layout_constraintStart_toStartOf="@id/fml_v_guideline_screen_start"
        app:layout_constraintEnd_toEndOf="@id/fml_v_guideline_card_end"
        app:layout_constraintBottom_toBottomOf="@id/fml_h_guideline_card_bottom"/>

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/fml_siv_card_poster"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:src="@drawable/card_poster"
        android:scaleType="centerCrop"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        app:shapeAppearanceOverlay="@style/posterCardImageViewStyle"
        app:layout_constraintTop_toTopOf="@id/fml_v_card"
        app:layout_constraintStart_toStartOf="@id/fml_v_card"
        app:layout_constraintEnd_toEndOf="@id/fml_v_card"
        app:layout_constraintBottom_toTopOf="@id/fml_tv_movie_title"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_card_poster"
        app:layout_constraintTop_toTopOf="@id/fml_siv_card_poster"
        app:layout_constraintStart_toStartOf="@id/fml_siv_card_poster"
        app:layout_constraintEnd_toEndOf="@id/fml_siv_card_poster"
        app:layout_constraintBottom_toBottomOf="@id/fml_siv_card_poster"/>

    <TextView
        android:id="@+id/fml_tv_age_limit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="12sp"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:background="@drawable/bg_age_limit"
        android:text="@string/age_limit_text"
        app:layout_constraintStart_toStartOf="@id/fml_v_card"
        app:layout_constraintTop_toTopOf="@id/fml_v_card"/>

    <ImageView
        android:id="@+id/fml_iv_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="13dp"
        android:src="@drawable/ic_like"
        app:layout_constraintTop_toTopOf="@id/fml_v_card"
        app:layout_constraintEnd_toEndOf="@id/fml_v_card"
        android:contentDescription="@string/fml_iv_cd_like_button" />

    <TextView
        android:id="@+id/fml_tv_tag_line"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="6dp"
        android:text="@string/amd_tv_tag_line_text"
        android:textColor="@color/radical_red"
        android:textSize="10sp"
        app:layout_constraintEnd_toEndOf="@id/fml_v_card"
        app:layout_constraintStart_toStartOf="@id/fml_v_card"
        app:layout_constraintBottom_toTopOf="@id/fml_rating_bar_stars"/>

    <androidx.appcompat.widget.AppCompatRatingBar
        android:id="@+id/fml_rating_bar_stars"
        style="@style/ratingBarOnMoviesList"
        android:scaleX="0.8"
        android:scaleY="0.8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:progress="80"
        android:theme="@style/ratingBarOnMoviesList"
        app:layout_constraintStart_toStartOf="@id/fml_v_card"
        app:layout_constraintBottom_toBottomOf="@id/fml_siv_card_poster"/>

    <TextView
        android:id="@+id/fml_tv_review_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/amd_tv_review_number_text"
        android:textColor="@color/dolphin"
        android:textSize="8sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/fml_rating_bar_stars"
        app:layout_constraintStart_toEndOf="@id/fml_rating_bar_stars"
        app:layout_constraintTop_toTopOf="@id/fml_rating_bar_stars" />

    <TextView
        android:id="@+id/fml_tv_movie_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginStart="8dp"
        android:text="@string/amd_tv_movie_title_text"
        android:textColor="@color/white_smoke"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/fml_v_card"
        app:layout_constraintStart_toStartOf="@id/fml_v_card"
        app:layout_constraintBottom_toTopOf="@id/fml_tv_duration" />

    <TextView
        android:id="@+id/fml_tv_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/fml_tv_text_duration"
        android:textColor="@color/dolphin"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/fml_v_card"
        app:layout_constraintBottom_toBottomOf="@id/fml_v_card"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fml_v_guideline_card_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fml_h_guideline_card_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>